<resources>
    <string name="app_name">MemoPay</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="letter_a">A</string>
    <string name="memo_pay_balance">Memo Pay balance</string>
    <string name="add_money">Add money</string>
    <string name="send_money">Send money</string>
    <string name="more">More</string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_amount_aed">Enter amount in AED</string>
    <string name="top_up_wallet">Top-up wallet</string>
    <string name="amount_should_not_empty">Amount should not be empty.</string>
    <string name="next">Next</string>
    <string name="search_by_name_phone_or_email">Search by name, phone or email</string>
    <string name="frequent">Frequent</string>
    <string name="you_can_also_send_money_by">You can also send money by</string>
    <string name="share_a_magic_link">Share a magic link</string>
    <string name="send_via_tap">Send via tap</string>
    <string name="send_money_to">Send money to</string>
    <string name="phone_number">Phone number</string>
    <string name="error_amount_exceeded">Amount should not exceed, zero or account should be valid!!</string>
    <string name="favorites">Favorites</string>
    <string name="other_contacts">Other contacts</string>
    <string name="send">Send</string>
    <string name="amount_credited">Amount credited</string>
    <string name="notifications_general_channel_id">general_notifications</string>
    <string name="notifications_general_channel">General notifications</string>
    <string name="notifications_general_channel_description">All notifications with a normal priority will use this channel</string>
    <string name="notifications_title_add_money">Add Money Notification</string>
    <string name="notifications_content_add_money">%s AED has been added</string>
    <string name="family">Family</string>
    <string name="school">School</string>
    <string name="food">Food</string>
    <string name="transport">Transport</string>
    <string name="confirm_transfer">Confirm transfer</string>
    <string name="money_sent_confirmation_label">The money will credited to the user account within 3 days from the date of the transfer.</string>
    <string name="intro_connect_bank_account">Connect your bank \naccount</string>
    <string name="intro_send_money_instantly">Send money \ninstantly</string>
    <string name="intro_no_fees">No Fees, No IBANs, \nNo Cash</string>
    <string name="sending_your_funds">Sending your funds...</string>
    <string name="try_again">Try again</string>
    <string name="send_money_failed">Send money failed!!</string>
    <string name="sorry_we_coudn_t_send_money_please_try_again">Sorry we coudn\'t send money. \n Please try again</string>
    <string name="go_to_dashboard">Go to dashboard</string>
    <string name="sent_success_message">"You send AED %s  to \n %s "</string>
    <string name="money_sent_caption">Money will be credited to the account within 12 hours. If it doesn’t happen, contact support.</string>
</resources>
