<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="?listPreferredItemHeight"
        android:drawableLeft="@drawable/ic_search_black_24dp"
        android:drawablePadding="@dimen/list_item_spacing_half"
        android:textColor="@color/hint_color"
        android:background="@null"
        android:layout_marginTop="@dimen/margin_32dp"
        android:hint="@string/search_by_name_phone_or_email"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFrequentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/frequent"
        android:textColor="#292A2E"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSearch" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listFrequent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_item_spacing_half"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tvFrequentTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSendMoneyOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_item_spacing"
        android:textColor="#292A2E"
        android:text="@string/you_can_also_send_money_by"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintTop_toBottomOf="@id/listFrequent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnShareMagicLink"
        android:layout_width="match_parent"
        android:layout_height="?listPreferredItemHeightSmall"
        android:layout_marginTop="@dimen/list_item_spacing_half"
        android:text="@string/share_a_magic_link"
        android:textAllCaps="false"
        android:background="@drawable/bg_round_white"
        app:layout_constraintTop_toBottomOf="@id/tvSendMoneyOption" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSendViaOtp"
        android:layout_width="match_parent"
        android:layout_height="?listPreferredItemHeightSmall"
        android:layout_marginTop="@dimen/list_item_spacing_half"
        android:text="@string/send_via_tap"
        android:textAllCaps="false"
        android:background="@drawable/bg_round_white"
        app:layout_constraintTop_toBottomOf="@id/btnShareMagicLink" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listContact"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/list_item_spacing"
        android:clipToPadding="false"
        android:descendantFocusability="blocksDescendants"
        android:nestedScrollingEnabled="true"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSendViaOtp" />

</androidx.constraintlayout.widget.ConstraintLayout>