<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="@dimen/list_item_spacing"
        android:paddingEnd="@dimen/list_item_spacing"
        android:paddingRight="@dimen/list_item_spacing"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/memo_pay_balance">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="?listPreferredItemHeightSmall"
            android:layout_height="?listPreferredItemHeightSmall"
            android:layout_gravity="end"
            android:background="@drawable/rounded_green"
            android:gravity="center"
            android:text="@string/letter_a"
            android:textColor="@android:color/white"
            android:textSize="@dimen/abc_text_size_headline_material" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAccountBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingLeft="@dimen/list_item_spacing"
        android:paddingRight="@dimen/list_item_spacing"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintTop_toBottomOf="@id/toolbar_main"
        tools:layout_editor_absoluteX="0dp"
        android:text="AED 2170.00"
        tools:text="AED 2170.00" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAddMoney"
        style="@style/MoneyActionButton"
        android:layout_marginTop="@dimen/list_item_spacing"
        android:drawableTop="@drawable/ic_add_money_white"
        android:text="@string/add_money"
        app:layout_constraintEnd_toStartOf="@+id/tvSendMoney"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/tvAccountBalance" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSendMoney"
        style="@style/MoneyActionButton"
        android:layout_marginLeft="@dimen/action_button_space"
        android:drawableTop="@drawable/ic_add_money_white"
        android:text="@string/send_money"
        app:layout_constraintEnd_toStartOf="@+id/tvMore"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/tvAddMoney"
        app:layout_constraintTop_toTopOf="@id/tvAddMoney" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMore"
        style="@style/MoneyActionButton"
        android:layout_marginLeft="@dimen/action_button_space"
        android:drawableTop="@drawable/ic_add_money_white"
        android:text="@string/more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/tvSendMoney"
        app:layout_constraintTop_toTopOf="@id/tvAddMoney" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listTransactionHistory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="@dimen/cardview_default_elevation"
        android:layout_marginTop="@dimen/action_button_space"
        app:layout_constraintTop_toBottomOf="@id/tvAddMoney"
        android:background="@drawable/bg_top_rounded_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>