<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLabelSendMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextBalanceTitle"
        android:layout_marginTop="@dimen/margin_24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/send_money_to"/>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePicConfirmTransfer"
        android:layout_width="?listPreferredItemHeightSmall"
        android:layout_height="?listPreferredItemHeightSmall"
        app:layout_constraintTop_toBottomOf="@id/tvLabelSendMoney"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/avatar_default"
        android:layout_marginTop="@dimen/margin_24dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvProfileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Sharifur Rahaman"
        android:lines="1"
        android:ellipsize="end"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/title_color"
        app:layout_constraintLeft_toRightOf="@id/profilePicConfirmTransfer"
        app:layout_constraintTop_toTopOf="@id/profilePicConfirmTransfer"
        app:layout_constraintBottom_toBottomOf="@id/profilePicConfirmTransfer"
        android:layout_marginLeft="@dimen/list_item_spacing" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLabelPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/TextBalanceTitle"
        android:layout_marginTop="?listPreferredItemHeightSmall"
        app:layout_constraintTop_toBottomOf="@id/profilePicConfirmTransfer"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+971908958375"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toBottomOf="@id/tvLabelPhoneNumber"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLabelAccountCredited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_credited"
        android:layout_marginTop="?listPreferredItemHeightSmall"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPhoneNumber"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCreditedAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="456"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintTop_toBottomOf="@id/tvLabelAccountCredited"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSendMoney"
        android:text="@string/send"
        style="@style/BlueButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margin_32dp"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/caption_color"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="@dimen/default_margin"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_marginBottom="@dimen/margin_24dp"
        android:text="@string/money_sent_confirmation_label"
        app:layout_constraintBottom_toTopOf="@id/btnSendMoney"/>

</androidx.constraintlayout.widget.ConstraintLayout>