<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAddMoneyTitle"
        style="@style/TextBalanceTitle"
        android:text="@string/memo_pay_balance"
        android:paddingTop="@dimen/margin_24dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:layout_goneMarginLeft="@dimen/activity_horizontal_margin"
        app:layout_goneMarginRight="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAccountBalance"
        style="@style/TextBalanceAmount"
        app:layout_constraintLeft_toLeftOf="@id/tvAddMoneyTitle"
        app:layout_constraintRight_toRightOf="@id/tvAddMoneyTitle"
        app:layout_constraintTop_toBottomOf="@id/tvAddMoneyTitle"/>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEnterAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintLeft_toLeftOf="@id/tvAddMoneyTitle"
        app:layout_constraintRight_toRightOf="@id/tvAddMoneyTitle"
        android:minHeight="?android:listPreferredItemHeightLarge"
        android:hint="@string/enter_amount_aed"
        android:inputType="numberDecimal"
        android:background="@null"
        android:layout_marginTop="@dimen/margin_32dp"
        app:layout_constraintTop_toBottomOf="@id/tvAccountBalance"/>


    <include  android:id="@+id/chipGroup"
        layout="@layout/chips_layout"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="@dimen/margin_32dp"
        app:layout_constraintLeft_toLeftOf="@id/tvAddMoneyTitle"
        app:layout_constraintRight_toRightOf="@id/tvAddMoneyTitle"
        app:layout_constraintTop_toBottomOf="@id/etEnterAmount"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        style="@style/BlueButton"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/margin_24dp"
        app:layout_constraintLeft_toLeftOf="@id/tvAddMoneyTitle"
        app:layout_constraintRight_toRightOf="@id/tvAddMoneyTitle"
        app:layout_constraintTop_toBottomOf="@id/chipGroup"
        android:text="@string/next"/>


    <FrameLayout
        android:id="@+id/progressbarSendMoney"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="@dimen/default_margin"
        android:visibility="gone"
        android:background="@color/windowBackgroundColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>