<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.memo.pay.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeFragment_to_AddMoneyFragment"
            app:destination="@id/addMoneyFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_homeFragment_to_sendMoneyFragment"
            app:destination="@id/sendMoneyFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <!-- <argument
             android:name="key_room_item"
             app:argType="com.dynatech.insidecontrol.data.model.RoomItem" />

         <argument
             android:name="key_room_item_list"
             app:argType="com.dynatech.insidecontrol.data.model.RoomItem[]" />


         <action
             android:id="@+id/action_roomFragment_to_settingsFragment"
             app:destination="@id/settingsFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />-->
    </fragment>

    <fragment
        android:id="@+id/addMoneyFragment"
        android:name="com.memo.pay.ui.addmoney.AddMoneyFragment"
        android:label="@string/enter_amount"
        tools:layout="@layout/fragment_add_money" />

    <fragment
        android:id="@+id/sendMoneyFragment"
        android:name="com.memo.pay.ui.sendmoney.SendMoneyFragment"
        android:label="@string/send_money" >
        <action
            android:id="@+id/action_sendMoneyFragment_to_ContactSelectionFragment"
            app:destination="@id/contactSelectionFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <argument
            android:name="key_amount"
            app:argType="float" />

    </fragment>


    <fragment
        android:id="@+id/contactSelectionFragment"
        android:name="com.memo.pay.ui.sendmoney.ContactSelectionFragment"
        android:label="@string/enter_amount"
        tools:layout="@layout/fragment_contact_selection">
        <action
            android:id="@+id/action_contactSelectionFragment_to_confirmTransferFragment"
            app:destination="@id/confirmTransferFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <argument
            android:name="key_account"
            app:argType="com.memo.pay.data.db.table.Account" />

    </fragment>


    <fragment
        android:id="@+id/confirmTransferFragment"
        android:name="com.memo.pay.ui.sendmoney.ConfirmTransferFragment"
        android:label="@string/enter_amount"
        tools:layout="@layout/fragment_confirm_transfer">

        <action
            android:id="@+id/action_confirmTransferFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true"/>

    </fragment>


</navigation>